linked hashmap for defaultmapvalue